[metadata]
name = lwatools
version = 0.0.1
author = Nicholas Bruce, Jeff Stacey
author_email = jtst@uvic.ca, nsbruce@uvic.ca
description = Tools for working with LWA data
url = https://github.com/mistic-lab/lwa-tools

[options]
packages = find:
python_requires >= 3.8
install_requires = 
    numpy
    scipy
    plotly
    h5py
    matplotlib
    argparse
    geographiclib
    pandas
    lsl >=2
    python-dotenv
